<resources>
    <string name="app_name">Notes Trainer</string>
    <string name="start_practice">Let\'s Go</string>
    <string name="e2">E2</string>
    <string name="option_4">Option 4</string>
    <string name="option_3">Option 3</string>
    <string name="option_2">Option 2</string>
    <string name="option_1">Option 1</string>
    <string name="attempts_text">Attempts: 0/0 (0%)</string>
    <string name="streak_text">Streak: 0</string>
    <string name="guitar_fret">Guitar fret</string>
    <string name="staff_reading">Staff Reading</string>
    <string name="fret_positions">Fret Positions</string>
    <string name="settings">Settings</string>
    <string name="fretboard_description">"Fretboard "</string>
    <string name="sample_note">E2</string>
    <string name="e">E</string>
    <string name="b">B</string>
    <string name="g">G</string>
    <string name="d">D</string>
    <string name="a">A</string>
    <string name="play_sounds">Play Sounds</string>
    <string name="hints">Show Hints</string>
</resources>