<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/statsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/statsTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="16dp"
            android:text="@string/attempts_text"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/streakTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="16dp"
            android:text="@string/streak_text"
            android:textAlignment="center"
            android:textSize="18sp" />
    </LinearLayout>

    <io.nimo.music.view.StaffView
        android:id="@+id/staffView"
        android:layout_width="200dp"
        android:layout_height="180dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@+id/statsLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonContainer"
        />


    <GridLayout
        android:id="@+id/buttonContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:columnCount="2"
        android:rowCount="2"
        android:padding="8dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/staffView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

    <Button
            android:id="@+id/buttonOption1"
            style="@style/CustomButtonStyle"
            android:text="@string/option_1" />

        <Button
            android:id="@+id/buttonOption2"
            style="@style/CustomButtonStyle"
            android:text="@string/option_2" />

        <Button
            android:id="@+id/buttonOption3"
            style="@style/CustomButtonStyle"
            android:text="@string/option_3" />

        <Button
            android:id="@+id/buttonOption4"
            style="@style/CustomButtonStyle"
            android:text="@string/option_4" />

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
